--- a/nextflow.config
+++ b/nextflow.config
@@ -11,44 +11,60 @@ params {
 
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
-    input                      = null
-    // References
-    genome                     = null
-    igenomes_base              = 's3://ngi-igenomes/igenomes/'
-    igenomes_ignore            = false
+    input                       = null
+    fastqs                      = null
+    // Cleanup options
+    remove_intermediate_files   = false
+    // Read preprocessing options
+    run_fastp                   = false
+    fastp_args                  = null
+    save_fastp_fastq            = false
+    perform_run_merging         = false
+    save_run_merged_fastq       = false
+    run_bowtie2_host_removal    = false
+    bowtie2_host_removal_args   = null
+    // iGenomes references
+    genome                      = null
+    igenomes_base               = 's3://ngi-igenomes/igenomes/'
+    igenomes_ignore             = false
+    // Local reference genome options
+    host_fasta                  = null
+    host_bowtie2_index          = null
+    save_host_removed_fastq     = false
+
 
     // MultiQC options
-    multiqc_config             = null
-    multiqc_title              = null
-    multiqc_logo               = null
-    max_multiqc_email_size     = '25.MB'
+    multiqc_config              = null
+    multiqc_title               = null
+    multiqc_logo                = null
+    max_multiqc_email_size      = '25.MB'
     multiqc_methods_description = null
 
     // Boilerplate options
-    outdir                       = null
-    publish_dir_mode             = 'copy'
-    email                        = null
-    email_on_fail                = null
-    plaintext_email              = false
-    monochrome_logs              = false
-    hook_url                     = null
-    help                         = false
-    version                      = false
-    pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/'
+    outdir                          = null
+    publish_dir_mode                = 'copy'
+    email                           = null
+    email_on_fail                   = null
+    plaintext_email                 = false
+    monochrome_logs                 = false
+    hook_url                        = null
+    help                            = false
+    version                         = false
+    pipelines_testdata_base_path    = 'https://raw.githubusercontent.com/nf-core/test-datasets/'
 
     // Config options
-    config_profile_name        = null
-    config_profile_description = null
-    custom_config_version      = 'master'
-    custom_config_base         = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
-    config_profile_contact     = null
-    config_profile_url         = null
+    config_profile_name             = null
+    config_profile_description      = null
+    custom_config_version           = 'master'
+    custom_config_base              = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
+    config_profile_contact          = null
+    config_profile_url              = null
 
     // Max resource options
     // Defaults only, expecting to be overwritten
-    max_memory                 = '128.GB'
-    max_cpus                   = 16
-    max_time                   = '240.h'
+    max_memory                      = '128.GB'
+    max_cpus                        = 16
+    max_time                        = '240.h'
 
     // Schema validation default options
     validationFailUnrecognisedParams = false
@@ -174,8 +190,9 @@ profiles {
         executor.cpus           = 4
         executor.memory         = 8.GB
     }
-    test      { includeConfig 'conf/test.config'      }
-    test_full { includeConfig 'conf/test_full.config' }
+    test_fastq          { includeConfig 'conf/test_fastq.config'        }
+    test_fasta          { includeConfig 'conf/test_fasta.config'        }
+    test_fastq_fasta    { includeConfig 'conf/test_fastq_fasta.config'  }
 }
 
 // Set default registry for Apptainer, Docker, Podman and Singularity independent of -profile
@@ -244,7 +261,10 @@ manifest {
 }
 
 // Load modules.config for DSL2 module specific options
-includeConfig 'conf/modules.config'
+includeConfig './workflows/toolkit/nextflow.config'
+
+// Set to true to enable the use of binaries from modules
+nextflow.enable.moduleBinaries = true
 
 // Function to ensure that resource requirements don't go beyond
 // a maximum limit
