Updated CI, finished adding local utils subworkflow, preprocessing subworkflow, and fixing main workflow/pipeline

--- a/nextflow.config
+++ b/nextflow.config
@@ -9,25 +9,28 @@
 // Global default params, used in configs
 params {
 
-    // TODO nf-core: Specify your pipeline's command line flags
-    // Input options
+    // PIPELINE OPTIONS
+    // Input/output
     input                       = null
     fastqs                      = null
-    // Cleanup options
+    fastas                      = null
+    outdir                      = null
+    // Cleanup
     remove_intermediate_files   = false
-    // Read preprocessing options
+    // READ PREPROCESSING OPTIONS
+    // Read trimming/QC
     run_fastp                   = false
     fastp_args                  = null
     save_fastp_fastq            = false
+    // Read runmerging
     perform_run_merging         = false
     save_run_merged_fastq       = false
+    // Host read removal
     run_bowtie2_host_removal    = false
     bowtie2_host_removal_args   = null
-    // iGenomes references
     genome                      = null
     igenomes_base               = 's3://ngi-igenomes/igenomes/'
     igenomes_ignore             = false
-    // Local reference genome options
     host_fasta                  = null
     host_bowtie2_index          = null
     save_host_removed_fastq     = false
@@ -41,7 +44,6 @@ params {
     multiqc_methods_description = null
 
     // Boilerplate options
-    outdir                          = null
     publish_dir_mode                = 'copy'
     email                           = null
     email_on_fail                   = null
@@ -190,9 +192,11 @@ profiles {
         executor.cpus           = 4
         executor.memory         = 8.GB
     }
+    nf_test             { includeConfig 'conf/nf_test.config'           }
     test_fastq          { includeConfig 'conf/test_fastq.config'        }
     test_fasta          { includeConfig 'conf/test_fasta.config'        }
     test_fastq_fasta    { includeConfig 'conf/test_fastq_fasta.config'  }
+    test_nothing        { includeConfig 'conf/test_nothing.config'      }
 }
 
 // Set default registry for Apptainer, Docker, Podman and Singularity independent of -profile
