--- a/nf-test.config
+++ b/nf-test.config
@@ -10,4 +10,7 @@ config {
 
     // default profile since test/nextflow.config does not work for max_cpus
     profile "nf_test"
+
+    // trigger full test run if changes are detected in these files
+    triggers 'nextflow.config', 'nf-test.config', 'assets/test-datasets/**/*'
 }
