--- a/conf/test_fastq.config
+++ b/conf/test_fastq.config
@@ -1,24 +1,41 @@
 /*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    Nextflow config file for running full-size tests
+    Nextflow config file for running FastQ tests
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    Defines input files and everything required to run a full size pipeline test.
+    Defines input files and everything required to run a FastQ pipeline test.
 
     Use as follows:
-        nextflow run nf-microbe/toolkit -profile test_full,<docker/singularity> --outdir <OUTDIR>
+        nextflow run nf-microbe/toolkit -profile test_fastq,<docker/singularity> --outdir <OUTDIR>
 
 ----------------------------------------------------------------------------------------
 */
 
 params {
-    config_profile_name        = 'Full test profile'
-    config_profile_description = 'Full test dataset to check pipeline function'
+    config_profile_name        = 'Test full FastQ functionality'
+    config_profile_description = 'Full FastQ dataset to check pipeline function'
 
-    // Input data for full size test
-    // TODO nf-core: Specify the paths to your full test data ( on nf-core/test-datasets or directly in repositories, e.g. SRA)
-    // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input = params.pipelines_testdata_base_path + 'viralrecon/samplesheet/samplesheet_full_illumina_amplicon.csv'
-
-    // Genome references
-    genome = 'R64-1-1'
+    // PIPELINE OPTIONS
+    // Input/output
+    input                       = "${projectDir}/assets/test-datasets/samplesheets/test_samplesheet.csv"
+    fastqs                      = ["${projectDir}/assets/test-datasets/fastqs/*_{1,2}.fastq.gz", "${projectDir}/assets/test-datasets/fastqs/*.fastq.gz"]
+    fastas                      = "${projectDir}/assets/test-datasets/fastas/*.fasta.gz"
+    // Cleanup
+    remove_intermediate_files   = true
+    // READ PREPROCESSING OPTIONS
+    // Read trimming/QC
+    run_fastp                   = true
+    fastp_args                  = null
+    save_fastp_fastq            = true
+    // Read runmerging
+    perform_run_merging         = true
+    save_run_merged_fastq       = true
+    // Host read removal
+    run_bowtie2_host_removal    = true
+    bowtie2_host_removal_args   = null
+    genome                      = "EB1"
+    igenomes_base               = 's3://ngi-igenomes/igenomes/'
+    igenomes_ignore             = false
+    host_fasta                  = null
+    host_bowtie2_index          = null
+    save_host_removed_fastq     = true
 }
