--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         NXF_VER:
           - "23.04.0"
           - "latest-everything"
-        shard: [ 1, 2 ]
+        shard: [1, 2]
         profile: [conda, docker, singularity]
     env:
       shards: "2"
@@ -41,16 +41,6 @@ jobs:
         uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # v4
         with:
           fetch-depth: 0
-
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
-          architecture: "x64"
-
-      - name: Install pdiff to see diff between nf-test snapshots
-        run: |
-          python -m pip install --upgrade pip
-          pip install pdiff
 
       - uses: nf-core/setup-nextflow@v2
         with:
@@ -74,6 +64,17 @@ jobs:
         uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3 # v5
         with:
           python-version: "3.11"
+
+      - uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4
+        id: cache-pip-pdiff
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-pdiff
+          restore-keys: |
+            ${{ runner.os }}-pip-pdiff
+
+      - name: Install Python dependencies
+        run: python -m pip install --upgrade pip pdiff cryptography
 
       - name: Set up miniconda
         if: matrix.profile == 'conda'
