--- a/nextflow.config
+++ b/nextflow.config
@@ -196,7 +196,7 @@ profiles {
     test_fastq          { includeConfig 'conf/test_fastq.config'        }
     test_fasta          { includeConfig 'conf/test_fasta.config'        }
     test_fastq_fasta    { includeConfig 'conf/test_fastq_fasta.config'  }
-    test_nothing        { includeConfig 'conf/test_nothing.config'      }
+    test                { includeConfig 'conf/test.config'              }
 }
 
 // Set default registry for Apptainer, Docker, Podman and Singularity independent of -profile
