--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,13 +9,6 @@ on:
   release:
     types: [published]
 
-env:
-  NXF_ANSI_LOG: false
-  NFT_VER: "0.9.0"
-  NFT_WORKDIR: "~"
-  NFT_DIFF: "pdiff"
-  NFT_DIFF_ARGS: "--line-numbers --expand-tabs=2"
-
 concurrency:
   group: "${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}"
   cancel-in-progress: true
@@ -28,17 +21,22 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        NXF_VER:
-          - "23.04.0"
-          - "latest-everything"
+        NXF_VER: ["23.04.0", "latest-everything"]
         shard: [1, 2]
         profile: [conda, docker, singularity]
     env:
       shards: "2"
+      NXF_ANSI_LOG: false
+      NFT_VER: "0.9.0"
+      NFT_WORKDIR: "~"
+      NFT_DIFF: "pdiff"
+      NFT_DIFF_ARGS: "--line-numbers --expand-tabs=2"
+      NXF_SINGULARITY_CACHEDIR: ${{ github.workspace }}/.singularity
+      NXF_SINGULARITY_LIBRARYDIR: ${{ github.workspace }}/.singularity
 
     steps:
       - name: Check out pipeline code
-        uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # v4
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
