--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         shard: [1, 2]
         profile: [conda, docker, singularity]
     env:
-      shards: "2"
+      SHARDS: "2"
       NXF_ANSI_LOG: false
       NFT_VER: "0.9.0"
       NFT_WORKDIR: "~"
