--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,10 +22,10 @@ jobs:
     strategy:
       matrix:
         NXF_VER: ["23.04.0", "latest-everything"]
-        shard: [1, 2]
+        shard: [1, 2, 3, 4]
         profile: [conda, docker, singularity]
     env:
-      SHARDS: "2"
+      SHARDS: "4"
       NXF_ANSI_LOG: false
       NFT_VER: "0.9.0"
       NFT_WORKDIR: "~"
@@ -102,7 +102,7 @@ jobs:
             --ci \
             --shard ${{ matrix.shard }}/${{ env.SHARDS }} \
             --changed-since HEAD^ \
-            --tag nfmicrobe_toolkit \
+            --tag nfmicrobe_toolkit_ci \
             --related-tests \
             --follow-dependencies \
             --profile=+${{ matrix.profile }} \
