--- a/workflows/toolkit/nextflow.config
+++ b/workflows/toolkit/nextflow.config
@@ -1,2 +1,2 @@
-includeConfig '../../subworkflows/nf-core/fastq_readpreprocessing_fastq/nextflow.config'
+includeConfig '../readpreprocessing/nextflow.config'
 includeConfig '../../modules/nf-core/multiqc/nextflow.config'
