--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,10 @@ jobs:
       fail-fast: false
       matrix:
         NXF_VER: ["23.04.0", "latest-everything"]
-        shard: [1, 2]
+        shard: [1, 2, 3, 4, 5]
         profile: [conda, docker, singularity]
     env:
-      SHARDS: "2"
+      SHARDS: "5"
       NXF_ANSI_LOG: false
       NFT_VER: "0.9.0"
       NFT_WORKDIR: "~"
