Added fastq_readassembly_fasta functionality

--- a/conf/test_fastq.config
+++ b/conf/test_fastq.config
@@ -16,9 +16,9 @@ params {
 
     // PIPELINE OPTIONS
     // Input/output
-    input                       = "${projectDir}/assets/test-datasets/samplesheets/test_samplesheet.csv"
-    fastqs                      = ["${projectDir}/assets/test-datasets/fastqs/*_{1,2}.fastq.gz", "${projectDir}/assets/test-datasets/fastqs/*.fastq.gz"]
-    fastas                      = "${projectDir}/assets/test-datasets/fastas/*.fasta.gz"
+    input                       = "${projectDir}/assets/test-datasets/samplesheets/test_fastq_samplesheet.csv"
+    fastqs                      = null
+    fastas                      = null
     // Cleanup
     remove_intermediate_files   = true
     // READ PREPROCESSING OPTIONS
@@ -32,10 +32,21 @@ params {
     // Host read removal
     run_bowtie2_host_removal    = true
     bowtie2_host_removal_args   = null
-    genome                      = "EB1"
+    genome                      = null
     igenomes_base               = 's3://ngi-igenomes/igenomes/'
-    igenomes_ignore             = false
-    host_fasta                  = null
-    host_bowtie2_index          = null
+    igenomes_ignore             = true
+    host_fasta                  = "${projectDir}/assets/test-datasets/fastas/genome.fasta.gz"
+    host_bowtie2_index          = "${projectDir}/assets/test-datasets/bowtie2/"
     save_host_removed_fastq     = true
+    // READ ASSEMBLY OPTIONS
+    run_megahit_single          = true
+    run_megahit_coassembly      = true
+    megahit_args                = null
+    run_spades_single           = true
+    run_spades_coassembly       = true
+    spades_args                 = "--meta --only-assembler"
+    use_spades_scaffolds        = true
+    run_penguin_single          = true
+    run_penguin_coassembly      = true
+    penguin_args                = "--min-contig-len 100"
 }
