--- a/nextflow.config
+++ b/nextflow.config
@@ -34,6 +34,17 @@ params {
     host_fasta                  = null
     host_bowtie2_index          = null
     save_host_removed_fastq     = false
+    // READ ASSEMBLY OPTIONS
+    run_megahit_single          = false
+    run_megahit_coassembly      = false
+    megahit_args                = null
+    run_spades_single           = false
+    run_spades_coassembly       = false
+    spades_args                 = null
+    use_spades_scaffolds        = false
+    run_penguin_single          = false
+    run_penguin_coassembly      = false
+    penguin_args                = null
 
 
     // MultiQC options
@@ -192,11 +203,12 @@ profiles {
         executor.cpus           = 4
         executor.memory         = 8.GB
     }
-    nf_test             { includeConfig 'conf/nf_test.config'           }
-    test_fastq          { includeConfig 'conf/test_fastq.config'        }
-    test_fasta          { includeConfig 'conf/test_fasta.config'        }
-    test_fastq_fasta    { includeConfig 'conf/test_fastq_fasta.config'  }
-    test                { includeConfig 'conf/test.config'              }
+    nf_test             { includeConfig 'conf/nf_test.config'                       }
+    test_fastq          { includeConfig 'conf/test_fastq.config'                    }
+    test_fasta          { includeConfig 'conf/test_fasta.config'                    }
+    test_fastq_fasta    { includeConfig 'conf/test_fastq_fasta.config'              }
+    test                { includeConfig 'conf/test.config'                          }
+    uw_hyak             { includeConfig 'assets/configs/conf/uw_hyak.config'        }
 }
 
 // Set default registry for Apptainer, Docker, Podman and Singularity independent of -profile
