--- a/nextflow.config
+++ b/nextflow.config
@@ -272,7 +272,7 @@ manifest {
     description     = """A toolkit for running microbe-related analyses within a Nextflow infrastructure."""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.04.0'
-    version         = '1.0dev'
+    version         = '0.1beta'
     doi             = ''
 }
 
