--- a/assets/configs/conf/uw_hyak.config
+++ b/assets/configs/conf/uw_hyak.config
@@ -2,8 +2,8 @@ params {
     config_profile_description = "Example config profile used for the University of Washington's Hyak HPC."
     config_profile_contact = 'Carson J. Miller (@CarsonJM)'
     config_profile_url = 'https://hyak.uw.edu/'
-    max_memory = 742.GB
-    max_cpus = 40
+    max_memory = 200.GB
+    max_cpus = 32
     max_time = 72.h
 }
 
@@ -29,7 +29,7 @@ process {
     //        If possible, it would be nice to keep the same label naming convention when
     //        adding in your local modules too.
     withLabel:process_single {
-        cpus   = { check_max( 1                  , 'cpus'    ) }
+        cpus   = { check_max( 1    * task.attempt, 'cpus'    ) }
         memory = { check_max( 6.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 4.h  * task.attempt, 'time'    ) }
     }
@@ -44,17 +44,17 @@ process {
         time   = { check_max( 8.h   * task.attempt, 'time'    ) }
     }
     withLabel:process_high {
-        cpus   = { check_max( 12                  , 'cpus'    ) }
-        memory = { check_max( 72.GB               , 'memory'  ) }
+        cpus   = { check_max( 12    * task.attempt, 'cpus'    ) }
+        memory = { check_max( 72.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 16.h  * task.attempt, 'time'    ) }
     }
     withLabel:process_long {
-        cpus   = { check_max( 12                  , 'cpus'    ) }
-        memory = { check_max( 72.GB               , 'memory'  ) }
+        cpus   = { check_max( 12    * task.attempt, 'cpus'    ) }
+        memory = { check_max( 72.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 32.h  * task.attempt, 'time'    ) }
     }
     withLabel:process_high_memory {
-        cpus   = { check_max( 12                  , 'cpus'    ) }
+        cpus   = { check_max( 12     * task.attempt, 'cpus'    ) }
         memory = { check_max( 250.GB * task.attempt, 'memory' ) }
         time   = { check_max( 16.h  * task.attempt, 'time'    ) }
     }
