Moved all code to workflow

--- a/assets/configs/conf/uw_hyak.config
+++ b/assets/configs/conf/uw_hyak.config
@@ -11,9 +11,11 @@ process {
     executor = 'slurm'
     // Set the default account for SLURM submission
     clusterOptions = { "-A stf" }
+    clusterOptions = { "-A pedslabs" }
 
     // Submit to different queues based on the number of attempts
     queue  = { task.attempt < 4 ? ( task.attempt < 3 ? 'ckpt' : 'compute' ) : 'cpu-g2-mem2x' }
+    queue  = 'compute-hugemem'
     // Default options for all process without labels
     cpus   = { check_max( 1    * task.attempt, 'cpus'   ) }
     memory = { check_max( 6.GB * task.attempt, 'memory' ) }
