--- a/nextflow.config
+++ b/nextflow.config
@@ -18,14 +18,13 @@ params {
     // Cleanup
     remove_intermediate_files   = false
     // READ PREPROCESSING OPTIONS
-    // Read trimming/QC
     run_fastp                   = false
     fastp_args                  = null
     save_fastp_fastq            = false
-    // Read runmerging
+    // READ MERGING OPTIONS
     perform_run_merging         = false
     save_run_merged_fastq       = false
-    // Host read removal
+    // HOST READ REMOVAL OPTIONS
     run_bowtie2_host_removal    = false
     bowtie2_host_removal_args   = null
     genome                      = null
@@ -45,6 +44,12 @@ params {
     run_penguin_single          = false
     run_penguin_coassembly      = false
     penguin_args                = null
+    // ASSEMBLY EXTENSION OPTIONS
+    run_cobra                   = false
+    cobra_args                  = null
+    run_phables                 = false
+    phables_db                  = null
+    phables_args                = null
 
 
     // MultiQC options
