--- a/workflows/toolkit/nextflow.config
+++ b/workflows/toolkit/nextflow.config
@@ -1,3 +1,6 @@
+includeConfig '../../modules/nf-core/cat/fastq/nextflow.config'
+includeConfig '../../modules/nf-core/fastqc/nextflow.config'
+includeConfig '../../modules/nf-core/fastp/nextflow.config'
 includeConfig '../../modules/nf-core/multiqc/nextflow.config'
+includeConfig '../../subworkflows/nf-core/fastq_bowtie2_fastq/nextflow.config'
 includeConfig '../../subworkflows/nf-core/fastq_readassembly_fasta/nextflow.config'
-includeConfig '../readpreprocessing/nextflow.config'
