--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,13 @@ indent_style = space
 [*.{md,yml,yaml,html,css,scss,js}]
 indent_size = 2
 
+[*.{hmm}]
+charset = unset
+end_of_line = unset
+insert_final_newline = unset
+trim_trailing_whitespace = unset
+indent_style = unset
+
 # These files are edited and tested upstream in nf-core/modules
 [/modules/nf-core/**]
 charset = unset
@@ -29,5 +36,5 @@ indent_style = unset
 indent_size = unset
 
 # ignore python and markdown
-[*.{py,md,hmm}]
+[*.{py,md}]
 indent_style = unset
