Fix linting and limit resource requests

--- a/conf/nf_test.config
+++ b/conf/nf_test.config
@@ -2,13 +2,16 @@ params {
     // Test data options
     test_data_base = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules'
     modules_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/'
+
+    max_memory                      = '15.GB'
+    max_cpus                        = 4
+    max_time                        = '2.h'
 }
 
 // Load test_data.config containing paths to test data
 includeConfig 'https://raw.githubusercontent.com/nf-core/modules/master/tests/config/test_data.config'
 
 process {
-    resourceLimits = [ cpus: 4, memory: 15.GB, time: 2.h ]
     withName: BOWTIE2_ALIGN {
         cpus = 1
     }
