--- a/.editorconfig
+++ b/.editorconfig
@@ -17,6 +17,7 @@ end_of_line = unset
 insert_final_newline = unset
 trim_trailing_whitespace = unset
 indent_style = unset
+indent_size = unset
 
 # These files are edited and tested upstream in nf-core/modules
 [/modules/nf-core/**]
