--- a/conf/nf_test.config
+++ b/conf/nf_test.config
@@ -1,4 +1,5 @@
 params {
+    remove_intermediate_files   = true
     // Test data options
     test_data_base = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules'
     modules_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/'
