Don't perform cleanup for tests

--- a/conf/nf_test.config
+++ b/conf/nf_test.config
@@ -1,5 +1,4 @@
 params {
-    remove_intermediate_files   = true
     // Test data options
     test_data_base = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules'
     modules_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/'
@@ -7,6 +6,8 @@ params {
     max_memory                      = '15.GB'
     max_cpus                        = 4
     max_time                        = '2.h'
+
+    remove_intermediate_files   = false
 }
 
 // Load test_data.config containing paths to test data
