--- a/nextflow.config
+++ b/nextflow.config
@@ -242,9 +242,7 @@ profiles {
         executor.memory         = 8.GB
     }
     nf_test             { includeConfig 'conf/nf_test.config'                       }
-    test_fastq          { includeConfig 'conf/test_fastq.config'                    }
-    test_fasta          { includeConfig 'conf/test_fasta.config'                    }
-    test_fastq_fasta    { includeConfig 'conf/test_fastq_fasta.config'              }
+    test_full           { includeConfig 'conf/test_full.config'                     }
     test                { includeConfig 'conf/test.config'                          }
     test_nothing        { includeConfig 'conf/test_nothing.config'                  }
     uw_hyak             { includeConfig 'assets/configs/conf/uw_hyak.config'        }
