--- a/assets/configs/conf/uw_hyak.config
+++ b/assets/configs/conf/uw_hyak.config
@@ -13,7 +13,7 @@ process {
     clusterOptions = { "-A stf" }
 
     // Submit to different queues based on the number of attempts
-    queue  = { task.attempt < 4 ? ( task.attempt < 3 ? 'ckpt' : 'compute' ) : 'cpu-g2-mem2x' }
+    queue  = { task.attempt < 4 ? ( task.attempt < 3 ? 'ckpt-all' : 'compute' ) : 'compute-hugemem' }
     // Default options for all process without labels
     cpus   = { check_max( 1    * task.attempt, 'cpus'   ) }
     memory = { check_max( 6.GB * task.attempt, 'memory' ) }
