--- a/assets/configs/conf/uw_hyak.config
+++ b/assets/configs/conf/uw_hyak.config
@@ -19,7 +19,7 @@ process {
     memory = { check_max( 6.GB * task.attempt, 'memory' ) }
     time   = { check_max( 4.h  * task.attempt, 'time'   ) }
 
-    errorStrategy = { task.exitStatus in ((130..145) + 104 + 250) ? 'retry' : 'finish' }
+    errorStrategy = { task.exitStatus in ((130..145) + 104 + 250 + 255) ? 'retry' : 'ignore' }
     maxRetries    = 4
     maxErrors     = '-1'
 
