Modified uw hyak profile

--- a/assets/configs/conf/uw_hyak.config
+++ b/assets/configs/conf/uw_hyak.config
@@ -2,7 +2,7 @@ params {
     config_profile_description = "Example config profile used for the University of Washington's Hyak HPC."
     config_profile_contact = 'Carson J. Miller (@CarsonJM)'
     config_profile_url = 'https://hyak.uw.edu/'
-    max_memory = 200.GB
+    max_memory = 300.GB
     max_cpus = 32
     max_time = 72.h
 }
@@ -13,14 +13,15 @@ process {
     clusterOptions = { "-A stf" }
 
     // Submit to different queues based on the number of attempts
-    queue  = { task.attempt < 4 ? ( task.attempt < 3 ? 'ckpt-all' : 'compute' ) : 'compute-hugemem' }
+    queue  = { task.attempt < 3 ? ( task.attempt < 2 ? 'ckpt-all' : 'compute' ) : 'compute-hugemem' }
     // Default options for all process without labels
     cpus   = { check_max( 1    * task.attempt, 'cpus'   ) }
     memory = { check_max( 6.GB * task.attempt, 'memory' ) }
     time   = { check_max( 4.h  * task.attempt, 'time'   ) }
 
-    errorStrategy = { task.exitStatus in ((130..145) + 104 + 250 + 255) ? 'retry' : 'ignore' }
-    maxRetries    = 4
+    // errorStrategy = { task.exitStatus in ((130..145) + 104 + 250 + 255) ? 'retry' : 'ignore' }
+    errorStrategy = { task.attempt < 4 ? 'retry' : 'ignore' }
+    maxRetries    = 3
     maxErrors     = '-1'
 
     // Process-specific resource requirements
