--- a/nextflow.config
+++ b/nextflow.config
@@ -92,76 +92,28 @@ params {
     vclust_align_args           = null
     vclust_cluster_args         = null
 
-    // illumina iGenomes reference file paths
-    genomes {
-        'GRCh37' {
-            fasta       = "s3://ngi-igenomes/igenomes/Homo_sapiens/Ensembl/GRCh37/Sequence/WholeGenomeFasta/genome.fa"
-            bowtie2     = "s3://ngi-igenomes/igenomes/Homo_sapiens/Ensembl/GRCh37/Sequence/Bowtie2Index/"
-        }
-        'GRCh38' {
-            fasta       = "s3://ngi-igenomes/igenomes/Homo_sapiens/NCBI/GRCh38/Sequence/WholeGenomeFasta/genome.fa"
-            bowtie2     = "s3://ngi-igenomes/igenomes/Homo_sapiens/NCBI/GRCh38/Sequence/Bowtie2Index/"
-        }
-        'hg38' {
-            fasta       = "s3://ngi-igenomes/igenomes/Homo_sapiens/UCSC/hg38/Sequence/WholeGenomeFasta/genome.fa"
-            bowtie2     = "s3://ngi-igenomes/igenomes/Homo_sapiens/UCSC/hg38/Sequence/Bowtie2Index/"
-        }
-        'hg19' {
-            fasta       = "s3://ngi-igenomes/igenomes/Homo_sapiens/UCSC/hg19/Sequence/WholeGenomeFasta/genome.fa"
-            bowtie2     = "s3://ngi-igenomes/igenomes/Homo_sapiens/UCSC/hg19/Sequence/Bowtie2Index/"
-        }
-        'EB2' {
-            fasta       = "s3://ngi-igenomes/igenomes/Bacillus_subtilis_168/Ensembl/EB2/Sequence/WholeGenomeFasta/genome.fa"
-            bowtie2     = "s3://ngi-igenomes/igenomes/Bacillus_subtilis_168/Ensembl/EB2/Sequence/Bowtie2Index/"
-        }
-    }
+    // References
+    genome                     = null
+    igenomes_base              = 's3://ngi-igenomes/igenomes/'
+    igenomes_ignore            = false
 
-    // Max resource options
-    // Defaults only, expecting to be overwritten
-    max_memory                      = '128.GB'
-    max_cpus                        = 16
-    max_time                        = '240.h'
+    // Boilerplate options
+    outdir                       = null
+    publish_dir_mode             = 'copy'
+    monochrome_logs              = false
+
+    help                         = false
+    help_full                    = false
+    show_hidden                  = false
+    version                      = false
+    pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/'
+    // Schema validation default options
+    validate_params            = true
 
 }
 
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
-
-process {
-    withName: '.*' {
-        ext.prefix = { prefix ->
-            if (meta.chunk && meta.extension) { "${meta.id}_run${meta.run}_${meta.assembler}_${meta.extension}_${meta.chunk}" }
-            else if (meta.chunk && meta.assembler) { "${meta.id}_run${meta.run}_${meta.assembler}_${meta.chunk}" }
-            else if (meta.chunk) { "${meta.id}_run${meta.run}_${meta.chunk}" }
-            else if (meta.assembler) { "${meta.id}_run${meta.run}_${meta.assembler}" }
-            else if (meta.run) { "${meta.id}_run${meta.run}" }
-            else { "${meta.id}" }
-        }
-        publishDir = { "${params.outdir}" + "/" + task.process.replace(':', '/').toLowerCase() }
-    }
-}
-
-// Load module configs
-includeConfig './modules/nf-core/cat/fastq/nextflow.config'
-includeConfig './modules/nf-core/fastp/nextflow.config'
-includeConfig './modules/local/logan/contigawscli/nextflow.config'
-includeConfig './modules/local/logan/contigawsclimultiplier/nextflow.config'
-includeConfig './modules/local/logan/unitigawsclimultiplier/nextflow.config'
-includeConfig './modules/local/megahit/megahit/nextflow.config'
-includeConfig './modules/local/plass/penguin/nextflow.config'
-includeConfig './modules/local/seqkit/replace/nextflow.config'
-includeConfig './modules/local/seqkit/seq/nextflow.config'
-includeConfig './modules/local/seqkit/split2/nextflow.config'
-includeConfig './modules/local/seqkit/stats/nextflow.config'
-includeConfig './modules/local/spades/nextflow.config'
-includeConfig './modules/local/sra/sratools/nextflow.config'
-includeConfig './modules/local/tantan/nextflow.config'
-includeConfig './modules/local/trfinder/nextflow.config'
-includeConfig './subworkflows/local/fasta_genomad_faatsv/nextflow.config'
-includeConfig './subworkflows/local/fastq_bowtie2_fastq/nextflow.config'
-includeConfig './subworkflows/local/fastq_viromeqc_tsv/nextflow.config'
-includeConfig './subworkflows/local/fastqfasta_cobra_fasta/nextflow.config'
-includeConfig './subworkflows/local/fastqgfa_phables_fasta/nextflow.config'
 
 profiles {
     debug {
@@ -177,7 +129,7 @@ profiles {
         podman.enabled          = false
         shifter.enabled         = false
         charliecloud.enabled    = false
-        conda.channels          = ['conda-forge', 'bioconda', 'defaults']
+        conda.channels          = ['conda-forge', 'bioconda']
         apptainer.enabled       = false
     }
     mamba {
@@ -200,6 +152,9 @@ profiles {
         apptainer.enabled       = false
         docker.runOptions       = '-u $(id -u):$(id -g)'
     }
+    arm {
+        docker.runOptions       = '-u $(id -u):$(id -g) --platform=linux/amd64'
+    }
     singularity {
         singularity.enabled     = true
         singularity.autoMounts  = true
@@ -208,6 +163,33 @@ profiles {
         podman.enabled          = false
         shifter.enabled         = false
         charliecloud.enabled    = false
+        apptainer.enabled       = false
+    }
+    podman {
+        podman.enabled          = true
+        conda.enabled           = false
+        docker.enabled          = false
+        singularity.enabled     = false
+        shifter.enabled         = false
+        charliecloud.enabled    = false
+        apptainer.enabled       = false
+    }
+    shifter {
+        shifter.enabled         = true
+        conda.enabled           = false
+        docker.enabled          = false
+        singularity.enabled     = false
+        podman.enabled          = false
+        charliecloud.enabled    = false
+        apptainer.enabled       = false
+    }
+    charliecloud {
+        charliecloud.enabled    = true
+        conda.enabled           = false
+        docker.enabled          = false
+        singularity.enabled     = false
+        podman.enabled          = false
+        shifter.enabled         = false
         apptainer.enabled       = false
     }
     apptainer {
@@ -220,27 +202,37 @@ profiles {
         shifter.enabled         = false
         charliecloud.enabled    = false
     }
-    nf_test             { includeConfig 'conf/nf_test.config'                       }
-    test_full           { includeConfig 'conf/test_full.config'                     }
-    test                { includeConfig 'conf/test.config'                          }
-    test_nothing        { includeConfig 'conf/test_nothing.config'                  }
-    uw_hyak             { includeConfig 'assets/configs/conf/uw_hyak.config'        }
+    wave {
+        apptainer.ociAutoPull   = true
+        singularity.ociAutoPull = true
+        wave.enabled            = true
+        wave.freeze             = true
+        wave.strategy           = 'conda,container'
+    }
+    gitpod {
+        executor.name           = 'local'
+        executor.cpus           = 4
+        executor.memory         = 8.GB
+    }
+    test      { includeConfig 'conf/test.config'      }
+    test_full { includeConfig 'conf/test_full.config' }
 }
 
-// Set default registry for Apptainer, Docker, Podman and Singularity independent of -profile
-// Will not be used unless Apptainer / Docker / Podman / Singularity are enabled
+// Set default registry for Apptainer, Docker, Podman, Charliecloud and Singularity independent of -profile
+// Will not be used unless Apptainer / Docker / Podman / Charliecloud / Singularity are enabled
 // Set to your registry if you have a mirror of containers
-apptainer.registry   = 'quay.io'
-docker.registry      = 'quay.io'
-podman.registry      = 'quay.io'
-singularity.registry = 'quay.io'
+apptainer.registry    = 'quay.io'
+docker.registry       = 'quay.io'
+podman.registry       = 'quay.io'
+singularity.registry  = 'quay.io'
+charliecloud.registry = 'quay.io'
 
-// Nextflow plugins
-plugins {
-    id 'nf-validation@1.1.3' // Validation of pipeline parameters and creation of an input channel from a sample sheet
+// Load igenomes.config if required
+if (!params.igenomes_ignore) {
+    includeConfig 'conf/igenomes.config'
+} else {
+    params.genomes = [:]
 }
-
-
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
 // The JULIA depot path has been adjusted to a fixed path `/usr/local/share/julia` that needs to be used for packages in the container.
 // See https://apeltzer.github.io/post/03-julia-lang-nextflow/ for details on that. Once we have a common agreement on where to keep Julia packages, this is adjustable.
@@ -252,8 +244,15 @@ env {
     JULIA_DEPOT_PATH = "/usr/local/share/julia"
 }
 
-// Capture exit codes from upstream processes when piping
-process.shell = ['/bin/bash', '-euo', 'pipefail']
+// Set bash options
+process.shell = """\
+bash
+
+set -e # Exit if a tool returns a non-zero status/exit code
+set -u # Treat unset variables and parameters as an error
+set -o pipefail # Returns the status of the last command to exit with a non-zero status or zero if all successfully execute
+set -C # No clobber - prevent output redirection from overwriting files.
+"""
 
 // Disable process selector warnings by default. Use debug profile to enable warnings.
 nextflow.enable.configProcessNamesValidation = false
@@ -278,47 +277,29 @@ dag {
 
 manifest {
     name            = 'nf-microbe/toolkit'
-    author          = """@CarsonJM"""
+    author          = """CarsonJM"""
     homePage        = 'https://github.com/nf-microbe/toolkit'
-    description     = """A toolkit for running microbe-related analyses within a Nextflow infrastructure."""
+    description     = """A Nextflow pipeline for running microbe-related analyses"""
     mainScript      = 'main.nf'
-    nextflowVersion = '!>=23.04.0'
-    version         = '0.1beta'
+    nextflowVersion = '!>=24.04.2'
+    version         = '1.0.0dev'
     doi             = ''
 }
 
-// Set to true to enable the use of binaries from modules
-nextflow.enable.moduleBinaries = true
+// Nextflow plugins
+plugins {
+    id 'nf-schema@2.1.1' // Validation of pipeline parameters and creation of an input channel from a sample sheet
+}
 
-// Function to ensure that resource requirements don't go beyond
-// a maximum limit
-def check_max(obj, type) {
-    if (type == 'memory') {
-        try {
-            if (obj.compareTo(params.max_memory as nextflow.util.MemoryUnit) == 1)
-                return params.max_memory as nextflow.util.MemoryUnit
-            else
-                return obj
-        } catch (all) {
-            println "   ### ERROR ###   Max memory '${params.max_memory}' is not valid! Using default value: $obj"
-            return obj
-        }
-    } else if (type == 'time') {
-        try {
-            if (obj.compareTo(params.max_time as nextflow.util.Duration) == 1)
-                return params.max_time as nextflow.util.Duration
-            else
-                return obj
-        } catch (all) {
-            println "   ### ERROR ###   Max time '${params.max_time}' is not valid! Using default value: $obj"
-            return obj
-        }
-    } else if (type == 'cpus') {
-        try {
-            return Math.min( obj, params.max_cpus as int )
-        } catch (all) {
-            println "   ### ERROR ###   Max cpus '${params.max_cpus}' is not valid! Using default value: $obj"
-            return obj
-        }
+validation {
+    defaultIgnoreParams = ["genomes"]
+    help {
+        enabled = true
+        command = "nextflow run $manifest.name -profile <docker/singularity/.../institute> --input samplesheet.csv --outdir <OUTDIR>"
+        fullParameter = "help_full"
+        showHiddenParameter = "show_hidden"
     }
 }
+
+// Load modules.config for DSL2 module specific options
+includeConfig 'conf/modules.config'
