Fixed aspera issue and added atb assembly download

--- a/nextflow.config
+++ b/nextflow.config
@@ -41,6 +41,7 @@ params {
     logan_unitigs_multiplier    = false
     // ASSEMBLY DOWNLOAD OPTIONS
     atb_urls                    = null
+    download_atb_sample         = false
     ena_urls                    = null
     ena_download_method         = null
     download_aria2_args         = null
@@ -114,13 +115,14 @@ params {
     run_bacphlip                = false
     // PROVIRUS ACTIVITY OPTIONS
     provirus_min_len            = 10000
+    run_provirus_dereplication  = false
+    provirus_derep_prefilt_args = null
+    provirus_derep_align_args   = null
+    provirus_derep_cluster_args = null
     run_mvirs                   = false
     mvirs_args                  = null
     run_prophage_tracer         = false
     prophage_tracer_args        = null
-    provirus_derep_prefilt_args = null
-    provirus_derep_align_args   = null
-    provirus_derep_cluster_args = null
     // MGE CLUSTERING OPTIONS
     run_vclust                  = false
     vclust_prefilter_args       = null
