Prevented mvirs and prophage_tracer from erroring when no hits are found

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -23,7 +23,10 @@ process {
             else if (meta.id) { "${meta.id}" }
             else null
         }
-        publishDir = { "${params.outdir}" + "/" + task.process.replace(':', '/').toLowerCase() }
+        publishDir = [
+            path: { "${params.outdir}" + "/" + task.process.replace(':', '/').toLowerCase() },
+            mode: params.publish_dir_mode
+        ]
     }
 
     withName: SRA_SRATOOLS {
