Run allthebacteria download with max of 12 threads

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -60,6 +60,11 @@ process {
     }
 
     withName: ALLTHEBACTERIA_ARIA2SEQKITTRFINDER {
+        resourceLimits = [
+            cpus: 12,
+            memory: '200.GB',
+            time: '72.h'
+        ]
         ext.args = params.download_aria2_args ? params.download_aria2_args : ""
         ext.args2 = params.download_seqkit_args ? params.download_seqkit_args : ""
         ext.args3 = params.download_trfinder_args ? params.download_trfinder_args : ""
