Started adding mgefinder

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -30,7 +30,8 @@ process {
     }
 
     withName: SRA_SRATOOLS {
-        ext.args = params.sratools_args ? params.sratools_args : ""
+        ext.args = params.prefetch_args ? params.prefetch_args : ""
+        ext.args2 = params.fasterq_dump_args ? params.fasterq_dump_args : ""
     }
 
     withName: FASTP {
@@ -257,6 +258,18 @@ process {
 
     withName: 'FASTQFASTA_PROPHAGETRACER_TSV:PROPHAGETRACER_WGS' {
         ext.args = params.prophage_tracer_args ? "${params.prophage_tracer_args}" : ""
+    }
+
+    withName: 'FASTQFASTA_MGEFINDER_TSV:MGEFINDER_FIND' {
+        ext.args = params.mgefinder_find_args ? "${params.mgefinder_find_args}" : ""
+    }
+
+    withName: 'FASTQFASTA_MGEFINDER_TSV:MGEFINDER_PAIR' {
+        ext.args = params.mgefinder_pair_args ? "${params.mgefinder_pair_args}" : ""
+    }
+
+    withName: 'FASTQFASTA_MGEFINDER_TSV:MGEFINDER_INFERSEQREFERENCE' {
+        ext.args = params.mgefinder_inferseq_ref_args ? "${params.mgefinder_inferseq_ref_args}" : ""
     }
 
     withName: 'SEQKIT_CONCAT_CLUSTER' {
