--- a/nextflow.config
+++ b/nextflow.config
@@ -12,7 +12,8 @@ params {
     //
     // READ DOWNLOAD OPTIONS
     sra_download_method         = null
-    sratools_args               = null
+    prefetch_args               = null
+    fasterq_dump_args           = null
     // READ PREPROCESSING OPTIONS
     run_fastp                   = false
     fastp_args                  = null
@@ -123,6 +124,10 @@ params {
     mvirs_args                  = null
     run_prophage_tracer         = false
     prophage_tracer_args        = null
+    run_mgefinder               = false
+    mgefinder_find_args         = null
+    mgefinder_pair_args         = null
+    mgefinder_inferseq_ref_args = null
     // MGE CLUSTERING OPTIONS
     run_vclust                  = false
     vclust_prefilter_args       = null
