Made changes and ran test for virus_recovery analysis

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -23,10 +23,20 @@ process {
             else if (meta.id) { "${meta.id}" }
             else null
         }
-        publishDir = [
-            path: { "${params.outdir}" + "/" + task.process.replace(':', '/').toLowerCase() },
-            mode: params.publish_dir_mode
-        ]
+        // publishDir = [
+        //     path: { "${params.outdir}" + "/" + task.process.replace(':', '/').toLowerCase() },
+        //     mode: params.publish_dir_mode
+        // ]
+        storeDir = {
+            if (meta.chunk && meta.extension) { "${params.outdir}" + "/" + task.process.replace(':', '/').toLowerCase() + "/${meta.id}_run${meta.run}_${meta.assembler}_${meta.extension}_${meta.chunk}" }
+            else if (meta.chunk && meta.assembler) { "${params.outdir}" + "/" + task.process.replace(':', '/').toLowerCase() + "/${meta.id}_run${meta.run}_${meta.assembler}_${meta.chunk}" }
+            else if (meta.chunk) { "${params.outdir}" + "/" + task.process.replace(':', '/').toLowerCase() + "/${meta.id}_run${meta.run}_${meta.chunk}" }
+            else if (meta.extension) { "${params.outdir}" + "/" + task.process.replace(':', '/').toLowerCase() + "/${meta.id}_run${meta.run}_${meta.assembler}_${meta.extension}" }
+            else if (meta.assembler) { "${params.outdir}" + "/" + task.process.replace(':', '/').toLowerCase() + "/${meta.id}_run${meta.run}_${meta.assembler}" }
+            else if (meta.run) { "${params.outdir}" + "/" + task.process.replace(':', '/').toLowerCase() + "/${meta.id}_run${meta.run}" }
+            else if (meta.id) { "${params.outdir}" + "/" + task.process.replace(':', '/').toLowerCase() + "/${meta.id}" }
+            else { "${params.outdir}" + "/" + task.process.replace(':', '/').toLowerCase() }
+        }
     }
 
     withName: SRA_SRATOOLS {
@@ -270,6 +280,10 @@ process {
 
     withName: 'FASTQFASTA_MGEFINDER_TSV:MGEFINDER_INFERSEQREFERENCE' {
         ext.args = params.mgefinder_inferseq_ref_args ? "${params.mgefinder_inferseq_ref_args}" : ""
+    }
+
+    withName: 'PROPAGATE' {
+        ext.args = params.propagate_args ? "${params.propagate_args}" : ""
     }
 
     withName: 'SEQKIT_CONCAT_CLUSTER' {
