--- a/nextflow.config
+++ b/nextflow.config
@@ -18,11 +18,13 @@ params {
     run_fastp                   = false
     fastp_args                  = null
     // HOST READ REMOVAL OPTIONS
-    run_bowtie2_host_removal    = false
+    host_removal_method         = null
     bowtie2_host_removal_args   = null
     igenomes_host_key           = 'EB2'
     host_fasta                  = null
     host_bowtie2_index          = null
+    hostile_index               = "human-t2t-hla.argos-bacteria-985_rs-viral-202401_ml-phage-202401"
+    hostile_args                = null
     // VIRUS ENRICHMENT EVALUATION OPTIONS
     run_viromeqc                = false
     viromeqc_db                 = null
@@ -86,6 +88,7 @@ params {
     run_genomad                 = false
     genomad_db                  = null
     genomad_args                = null
+    use_genomad_fasta           = false
     run_pyhmmer_virus           = false
     run_pyhmmer_plasmid         = false
     run_pyhmmer_busco           = false
@@ -128,6 +131,8 @@ params {
     mgefinder_find_args         = null
     mgefinder_pair_args         = null
     mgefinder_inferseq_ref_args = null
+    run_propagate               = false
+    propagate_args              = null
     // MGE CLUSTERING OPTIONS
     run_vclust                  = false
     vclust_prefilter_args       = null
@@ -372,3 +377,11 @@ validation {
 
 // Load modules.config for DSL2 module specific options
 includeConfig 'conf/modules.config'
+
+process {
+    resourceLimits = [
+        cpus: 4,
+        memory: '15.GB',
+        time: '1.h'
+    ]
+}
