Updated hyak requests and retry strategy

--- a/nextflow.config
+++ b/nextflow.config
@@ -56,7 +56,7 @@ params {
     megahit_args                = null
     run_spades_single           = false
     run_spades_coassembly       = false
-    spades_args                 = "--meta"
+    spades_args                 = "--meta --only-assembler"
     use_spades_scaffolds        = false
     run_penguin_single          = false
     run_penguin_coassembly      = false
@@ -377,11 +377,3 @@ validation {
 
 // Load modules.config for DSL2 module specific options
 includeConfig 'conf/modules.config'
-
-process {
-    resourceLimits = [
-        cpus: 4,
-        memory: '15.GB',
-        time: '1.h'
-    ]
-}
