Updated errorStrategy to only retry certain error codes after attempt 2

--- a/assets/configs/conf/uw_hyak.config
+++ b/assets/configs/conf/uw_hyak.config
@@ -17,10 +17,10 @@ process {
     // Submit to different queues based on the number of attempts
     queue  = { task.attempt < 4 ? (task.attempt < 3 ? 'ckpt' : 'compute' ) : 'compute-hugemem' }
 
-    // errorStrategy = { task.exitStatus in ((130..145) + 104 + 250 + 255) ? 'retry' : 'ignore' }
+    errorStrategy = { task.attempt < 2 ? 'retry' : ( task.exitStatus in ((130..145) + 104 + 250 + 255) ? 'retry' : 'ignore' ) }
     maxRetries    = 3
     maxErrors     = '-1'
-}
+}d
 
 executor {
     submitRateLimit = '1 sec'
